# coto2-ba-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml
app/: dependencies.py  main.py
app/routers/: vector.py
app/schemas/: vector.py
app/services/: vector_engine.py
scripts/: download_model.sh  entrypoint.sh
