[project]
name = "coto2-ba-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev   = "fastapi dev app/main.py"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
lint  = "ruff check ."
